Fixed type scale on mobile typewriter

--- a/source/scss/01-base/_animations.scss
+++ b/source/scss/01-base/_animations.scss
@@ -50,7 +50,7 @@
 
 @media (max-width: 600px) {
   .typewriter {
-    font-size: 24px;
+    font-size: 20px;
   }
 }
 
